# lomin-textscope-core

./: .bandit  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile.base  Dockerfile.bentoml  Dockerfile.fastapi  README.md  _DOWNLOADED.env  app_copy.pyi  apply-thales.sh  azure-pipelines.yml  build.sh  convert_pnt_to_tiff.py  core  dist.pyi  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.2gpu.yml  docker-compose.2serving.db_replica.yml  docker-compose.2serving.db_replica_pc1.yml  docker-compose.2serving.db_replica_pc2.yml  docker-compose.2serving.dev.yml  docker-compose.2serving.prod.yml  docker-compose.2serving.yml  docker-compose.base.yml  docker-compose.build.yml  docker-compose.db_replica.yml  docker-compose.db_replica_pc1.yml  docker-compose.db_replica_pc1_2gpu.yml  docker-compose.db_replica_pc2.yml  docker-compose.db_replica_pc2_2gpu.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.dev_2GPU.yml  docker-compose.kakaobank.yml  docker-compose.prod.test.yml  docker-compose.prod.yml  (+19 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  create_app.py  main.py  models.py  schemas.py
assets/: DEPLOY_README.md  apply-thales-remote.sh  apply-thales.sh  basic_cert_boxlist_data.pickle  bentoml_configuration.yml  boxlist_data.pickle  deploy-setup.sh  envelop_serving_files.sh  family_cert_boxlist_data.pickle  generate_docker_compose.py  heungkuklife.json  idcard.json  kakaobank.json  kbcard.json  kdt.json  load-textscope-images.sh  lomin.json  poetry-check.sh  poetry-lock.sh  regi_cert_boxlist_data.pickle  remove-textscope-related-image-and-volume-and-network.sh  run.sh  save-image-to-local.sh  stop_gunicorn.sh  textscope.json  textscope_document.json  textscope_id.json
backend/: main.py
circleci/: build.sh  deploy.sh  docker-build.sh  docker-run.sh  prepare.sh  run.sh  run_eval_scrp.sh  set_env.sh  test.sh
cleaner/: dockerfile  entrypoint.sh
database/: my.cnf
db/: create_dummy_table.py
docker/: Dockerfile.base  Dockerfile.fastapi  Dockerfile.nginx  Dockerfile.redoc
elasticsearch/: Dockerfile.elasticsearch  query.txt
grafana/: Dockerfile
inference_server/: document_model_service.py  encrytion.py  encrytion_test.py  generate_document_model_service.py  generate_idcard_model_service.py  idcard_model_service.py  minio_test.py
k8s/: gpu-demo.yaml  helm2manifest.sh  istio_gateway.yaml  ldap.yaml  monitoring.yaml  namespace.yaml  nvidia-device-plugin.yaml  run.sh  textscope.yaml
kakaobank_wrapper/: setup.py
kb_wrapper/: setup.py
ldap/: grafana.ini  ldap.toml
mysql.conf/: my.cnf  mysql-cluster.cnf
openldap/: Dockerfile  docker-compose.yaml  ldap.conf  notes.md  prepopulate.sh
pp_server/: setup.py
proxy/: default.conf  multiple_gpu_load_balancing.conf  nginx.conf
pyminifier/: test.py
requirements/: requirments-training.txt
requirements/pp/: pyproject.toml  requirements.txt
requirements/textscope/: pyproject.toml  requirements.txt
requirements/web/: pyproject.toml  requirements-dev.txt  requirements.txt
requirments/: requirments-kakaobank.txt  requirments-kbcard.txt  requirments-lint.txt  requirments-pp.txt  requirments-serving.txt  requirments-test.txt  requirments-textscope.txt  requirments-web.txt  (+2 more)
(+565 files in other folders)
