[tool.poetry]
name = "pp"
version = "0.1.0"
description = ""
authors = ["mirjung <mr.jung@lomin.ai>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
fastapi = "0.65.2"
uvicorn = "0.14.0"
python-multipart = "0.0.5"
python-dotenv = "0.17.1"
pydantic = {version = "1.8.2", extras = ["email", "dotenv"]}
numpy = "1.21.0"
httpx = "0.18.2"
Shapely = "1.8a1"
pdf2image = "1.16.0"
tifffile = "2020.9.3"
soynlp = "0.0.493"
loguru = "0.5.3"
SQLAlchemy-Utils = "0.37.8"
Cython = "0.29.24"
opencv-python = "4.5.3.56"
gunicorn = "20.1.0"
regex = "2021.10.8"
imgaug = "0.4.0"
pandas = "1.1.5"
tqdm = "4.62.3"
konlpy = "0.6.0"
pillow = "9.0.1"

[tool.poetry.dev-dependencies]
Nuitka = "0.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
