[tool.poetry]
name = "wrapper"
version = "0.1.0"
description = ""
authors = ["mirjung <mr.jung@lomin.ai>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
fastapi = "0.65.2"
uvicorn = "0.14.0"
httpx = "0.18.2"
pydantic = {version = "1.8.2", extras = ["dotenv", "email"]}
SQLAlchemy = "1.3.24"
loguru = "0.5.3"
python-multipart = "0.0.5"
opencv-python = "4.5.2.54"
tifffile = "2020.9.3"
pdf2image = "1.16.0"
scikit-image = "0.17.2"
SQLAlchemy-Utils = "0.37.8"
pytz = "2021.1"
requests = "2.26.0"
gunicorn = "20.1.0"
async-exit-stack = "1.0.1"
pytest = "6.2.5"
pandas = "1.1.5"
openpyxl = "3.0.9"
DateTime = "4.3"
passlib = "1.7.4"
python-jose = "3.3.0"
psycopg2-binary = "2.9.2"
sqlacodegen = "3.0.0b2"
soynlp = "0.0.493"
numpy = "1.19.5"
elasticsearch = "7.16.2"
PyYAML = "6.0"
omegaconf = "2.1.1"
alive-progress = "2.1.0"
hydra-core = "1.1.1"
jamo = "0.4.1"
minio = "7.1.3"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
