[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["mirjung <mr.jung@lomin.ai>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
fastapi = "0.65.2"
uvicorn = "0.14.0"
SQLAlchemy = "1.3.24"
databases = "0.4.3"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
python-multipart = "0.0.5"
cryptography = "3.4.0"
python-dotenv = "0.17.1"
pydantic = {version = "1.8.2", extras = ["email", "dotenv"]}
PyJWT = "2.1.0"
aiohttp = "3.7.4.post0"
prometheusrock = "0.2.0"
requests = "2.25.1"
numpy = "1.21.0"
httpx = "0.18.2"
SQLAlchemy-Utils = "0.37.8"
gunicorn = "20.1.0"
async-exit-stack = "1.0.1"
psycopg2-binary = "2.9.2"
pandas = "1.1.5"
pdf2image = "1.16.0"
ldap3 = "2.9.1"
pdfminer = "20191125"
soynlp = "0.0.493"
tifffile = "2020.9.3"
opencv-python = "4.5.2.54"
pytest = "7.0.1"
pytest-parallel = "0.1.1"
fastapi-cprofile = "0.0.2"
fastapi-profiler = "1.0.0"
pyinstrument = "3.4.2"
loguru = "0.5.3"
Pillow = "8.4.0"
python-json-logger = "2.0.2"
rich = "11.2.0"
PyYAML = "6.0"
minio = "7.1.3"
imagecodecs = "2020.5.30"
hydra-core = "^1.1.2"

[tool.poetry.dev-dependencies]
Nuitka = "0.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
